# gen-gallery

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  PRODUCT.md  README.md  package-lock.json  package.json  playwright.config.js  pyproject.toml
scripts/: bootstrap.sh  start.sh  stop.sh
src/imagegen_server/: __init__.py  app.py  config.py  errors.py  main.py  openai_client.py  schemas.py  sdk_edit_prep.py  storage.py  worker.py
src/imagegen_server/web/: app.js  index.html  styles.css
tests/: test_duplicate_job.py  test_favorites.py  test_provider_routing.py  test_reference_dedupe.py  test_restart_recovery.py  test_web_cache.py
tests/e2e/: gallery.spec.js
